# grundlagen_neuronale_netze

./: .gitignore  pyproject.toml
Aufgabe1/: 10.1_Neuron.py  Perzeptron.py
Aufgabe2/: 10.3_RProp_Neuron.py  IRprop-_Backpropagation.py
Aufgabe3/: RBM.py
Aufgabe4/: pooling.py
Aufgabe5/: RNN.py
