[project]
name = "grundlagen-neuronale-netze"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "minimal (>=0.1.0,<0.2.0)",
    "numpy (==2.1)",
    "python-mnist (>=0.7,<0.8)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
